deployments/production/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: martian-imperial-year-table
spec:
  replicas: 2
